--- a/cinematography.html
+++ b/cinematography.html
@@ -25,7 +25,7 @@
         <div class="navmusicmargin">
             Contents
             <ul> 
-                <li><a href="#1" class="txtnavmusic">What is cinematography?</a></li>
+                <li><a href="#1" class="txtnavmusic">What is Cinematography?</a></li>
                 <li><a href="#2" class="txtnavmusic">What does a cinematographer do?</a></li>
                 <li><a href="#3" class="txtnavmusic">5 c's of cinematography</a></li>
                 <li><a href="#4" class="txtnavmusic">How to become a cinematographer </a></li> 
