--- a/cinematography.html
+++ b/cinematography.html
@@ -36,7 +36,7 @@
     </nav> 
     <div class="musicpad">
         <div class="musiccontent">
-            <div class="musiccontenttxt"><h1 id="1">What is cinematography?</h1> <br> 
+            <div class="musiccontenttxt"><h1 id="1">What is Cinematography?</h1> <br> 
                 <img src="satyajit-ray.jpg" style="width: 820px;height: 450px;">
                 <p>
                     Cinematography is the art and craft of making motion pictures by capturing a story visually. Though, technically, cinematography is the art and the science of recording light either electronically onto an image sensor or chemically onto film. <br>
